Added flowable address for routing all connections

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,13 @@
 logging.level.org.springframework.web = DEBUG
-server.port = 8030
+
+#Zuul routes. Here for /student path, we are routing to localhost:8090 with extra path after that.
+zuul.routes.flowable.url=http://localhost:8020
+zuul.routes.flowable.path = /app/**
+
+#Ribbon is auto integrated with Zuul and for this exercise we are not using that.
+ribbon.eureka.enabled=false
+
+#Will start the gateway server @8080
+server.port=8080
+
+spring.application.name = api-gateway
